-Upgrade quarkus to 3.30.6 -Fixed orchestrator unit tests and running mappings for running locally -Added checkstyle validations to the orchestrator -Added missing favicon.ico